# Conan2SimpleTest

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
